# inventree-apprise

./: LICENSE  README.md  pyproject.toml
.github/workflows/:  action.yaml
src/inventree_apprise/: ApprisePlugin.py  __init__.py  core.py
