[build-system]
requires = ["setuptools", "wheel", "pyyaml"]
build-backend = "setuptools.build_meta"

[project]
name = "inventree-apprise"
dynamic = ["version"]
description=" Send notifications from InvenTree via Apprise"
readme = "README.md"
license = {text = "MIT"}
keywords = ["inventree", "inventree-plugin", "apprise"]
authors = [
    {name = "Matthias Mair", email =  "code@mjmair.com"}
]
classifiers=[
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Scientific/Engineering",
    "Framework :: InvenTree",
]
requires-python=">=3.11"
dependencies = ['apprise>=1.0.0,<2.0.0']

[project.optional-dependencies]
dev = ['twine', 'setuptools']

[project.urls]
"Repository" = "https://github.com/invenhost/inventree-apprise"
"Bug Tracker" = "https://github.com/invenhost/inventree-apprise/issues"

[project.entry-points."inventree_plugins"]
inventree-apprise = "inventree_apprise.ApprisePlugin:ApprisePlugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "inventree_apprise.PLUGIN_VERSION"}

[tool.ruff]
exclude=[".git","__pycache__","dist","build","test.py","tests", "venv","env",".venv",".env"]

[tool.ruff.lint]
select = ["A", "B", "C4", "D", "DJ", "N", "I","S"]
ignore = ["N999", ]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder" ]
known-first-party = ["src", "plugin", "InvenTree", "common"]

[tool.ruff.lint.isort.sections]
"django" = ["django"]

[tool.check-wheel-contents]
ignore = ['W004']

[dependency-groups]
dev = [
    "django>=4.2.30",
]
